Remove placeholder name from Valentine's message

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </div>
 
     <p class="message">
-      Happy Valentine’s Day, [Friend’s Name]! 🌸💖<br><br>
+      Happy Valentine’s Day 🌸💖<br><br>
       I hope your day is full of smiles, laughter, and all the little things that make you happy.<br>
       You’re an amazing friend, and I’m so grateful for all the fun, support, and memories we share.<br>
       Here’s to celebrating friendship, joy, and all the wonderful things life has in store for you!<br><br>
